2008-04-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/ResourceThought.py
	Allow editing of a resource thought through right click.

2008-04-20 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/ResourceThought.py
	* src/TextThought.py
	* src/MainWindow.py
	* src/MMapArea.py
	* src/utils.py
	* data/labyrinth-ui.xml
	* data/labyrinth.glade
	Add resource thoughts, tackling issue 101.

2008-04-19 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/labyrinth.py
	Minor cleanups like indentation.

2008-04-19 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Small refactorizations.

2008-04-14 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* help/
	Initial import of user manual.

2008-04-13 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Browser.py
	* src/MainWindow.py
	Address some problems with the sidebar (Issue 94) such as
	auto-showing and expanding.

2008-04-13 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Implemented issue 100. However it feels rather strange, so
	it should be tested with users.

2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/DrawingThought.py
	* src/Links.py
	* src/TextBufferMarkup.py
	* src/UndoManager.py
	Refactorizations.

2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Links.py
	Add link colors through context menu.

2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	* src/MainWindow.py
	Fixed outline treeview bugs and simplified its code.

2008-04-11 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Use a 1-pixel-wide border line for selection box.

2008-04-11 Martin Schaaf <mascha@ma-scha.de>

	* src/MainWindow.py
	Fix exception on maximizing loaded map by calling maximize on
	the gtk window not on the labyrinth window object.

2008-04-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py